# simple-hardcoded-connectors

./: .gitignore  README.md  dev.py  main.py  pyproject.toml
.state/local/: freddie_mac.json
assets/big_mac_index/: big_mac_index.py
assets/ember_electricity/: ember_electricity.py
assets/freddie_mac/: freddie_mac.py
src/: main.py
src/ingest/: data_sources.py
src/transforms/big_mac_index/: main.py  test.py
src/transforms/freddie_mac/: main.py  test.py
src/transforms/pmms/: main.py  test.py
