[project]
name = "simple-hardcoded-connectors"
version = "0.1.0"
description = "Simple hardcoded data connectors"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyarrow",
    "tenacity",
    "ratelimit",
    "boto3",
    "duckdb",
    "requests",
    "pyiceberg",
    "pandas",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = []
