[project]
name = "simple-hardcoded-connectors"
version = "0.1.0"
description = "Simple hardcoded data connectors"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "httpx",
    "pyarrow",
    "tenacity",
    "ratelimit",
    "boto3",
    "duckdb",
    "requests",
    "deltalake>=0.17.0",
    "pandas",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = [
    "psutil>=5.9.0",]
